# ChangeLog for dev-python/html
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> html-1.16.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> html-1.16.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> html-1.16.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  13 Sep 2011; James Rowe <jnrowe@gmail.com> html-1.16.ebuild:
  QA: Whitespace fix.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -html-1.14.ebuild,
  html-1.16.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> html-1.16.ebuild:
  Keyworded amd64.

  28 Jul 2011; James Rowe <jnrowe@gmail.com> -html-1.13.ebuild,
  html-1.14.ebuild:
  Keyworded x86.

  28 Jul 2011; James Rowe <jnrowe@gmail.com> html-1.14.ebuild:
  Keyworded amd64.

*html-1.16 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +html-1.16.ebuild:
  Version bump [422].

*html-1.14 (27 Jun 2011)

  27 Jun 2011; James Rowe <jnrowe@gmail.com> +html-1.14.ebuild:
  Version bump [403].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  09 Nov 2010; James Rowe <jnrowe@gmail.com> -html-1.12.ebuild,
  html-1.13.ebuild:
  Keyworded x86.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> html-1.13.ebuild:
  Keyworded amd64.

  18 Oct 2010; James Rowe <jnrowe@gmail.com> -html-1.11.ebuild,
  html-1.12.ebuild:
  Keyworded x86.

  18 Oct 2010; James Rowe <jnrowe@gmail.com> html-1.12.ebuild:
  Keyworded amd64.

*html-1.13 (08 Oct 2010)

  08 Oct 2010; James Rowe <jnrowe@gmail.com> +html-1.13.ebuild:
  Version bump [195]. No significant changes.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

*html-1.12 (18 Sep 2010)

  18 Sep 2010; James Rowe <jnrowe@gmail.com> +html-1.12.ebuild: